sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: not found: value getValuecount
    realj=getValuecount()-2- j;
          ^