sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  var fin=false
  var realj=0
  for (j<-0 to getValueCount()-2){
    realj=getValuecount()-2- j;
    while (fin==false){
      fin=true
      for (i<-0 to realj){
          if (isSmaller(i+1,i)==true) {
            swap(i,i+1);
            fin=false;
      }
  	}

  }
}
}